
2015-10-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: added cb_unix_lf to enable possible output of generated files
	  with unix lf (especially for listing files and testsuite)
	* codegen.c (output_entry_function): don't generate "return" for
	  void functions

2016-10-29  Dave Pitts <dpitts@cozx.com>

	* cobc.c (print_program_header): Changed to allow for 9 character 
	  version field (eg. VV.RR.PPP).

2016-10-28  Dave Pitts <dpitts@cozx.com>

	* cobc.h: Moved CB_LIST_PICSIZE here and increased length to 80.
	* cobc.c (set_picure): Added picture_len argument and reorganized.
	* cobc.c (print_fields): Added picture_len argument set to width of
	  listing.

2015-10-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_run): use COB_EXEEXT for systems that need it
	* parser.y: added "local_" prefix for function parameters that used
	  identical names as static vars

2015-10-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c: fixed checks of overlapping MOVE and don't raise warnings for
	  items in occurs as the check for this was borked
	* warning.def, typeck.c: added new CB_NOWARNDEF -Wpossible-overlap for
	  items that only *may* overlap (-Woverlap only warns if overlap is sure)

2016-10-25  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* cobc.c. cobc.h: moved multiple #undef of internal used macros to cobc.h
	* config.def: added reference-out-of-declaratives config option
	* typeck.c (cb_validate_program_body): use cb_reference_out_of_declaratives
	* cobc.c (process_command_line): make sure cb_reference_out_of_declaratives
	  is not stricter than CB_WARNING when cb_relaxed_syntax_checks is active

2016-10-23  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* tree.h, tree.c, typeck.c, parser.y: fixed missing type changes
	  from int to cob_flags_t for functions using disp_attrs

2016-10-23  Edward Hart <edward.dan.hart@gmail.com>
